--- a/src/hw/fpga/software/FPGA_SWCONF.in
+++ b/src/hw/fpga/software/FPGA_SWCONF.in
@@ -24,7 +24,7 @@ FPGA_DEF_CONF  = -DGIFT_RV32_TYPE2 -DGIFT_FIXSLICING
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
 else ifeq "${ALG}" "grain"
-FPGA_DEF_CONF  = -DGRAIN_RV32_TYPE1      -DDRIVER_TEST_BYPASS
+FPGA_DEF_CONF  = -DGRAIN_RV32_TYPE1      -DDRIVER_BYPASS_TEST
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
 else ifeq "${ALG}" "photon"
@@ -34,7 +34,7 @@ FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASUR
 
 else ifeq "${ALG}" "romulus"
 FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE1   -DROMULUS_FIXSLICING
-FPGA_DEF_CONF += -DROMULUS_RV32_UNROLL  -DDRIVER_TEST_BYPASS
+FPGA_DEF_CONF += -DROMULUS_RV32_UNROLL  -DDRIVER_BYPASS_TEST
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
 else ifeq "${ALG}" "sparkle"
