--- a/src/sw/sparkle/Makefile.in
+++ b/src/sw/sparkle/Makefile.in
@@ -6,6 +6,7 @@
 
 # =============================================================================
 
+ifeq "${API}" "aead"
 export NIST_HOME     ?= ${REPO_HOME}/src/sw/sparkle/nist/Implementations/crypto_aead/schwaemm256128v2
 export NIST_IMP      ?= opt
 export NIST_KAT      ?= ${NIST_HOME}/LWC_AEAD_KAT_128_256.txt
@@ -17,5 +18,12 @@ export NIST_SOURCES  +=                                                      $(w
 export NIST_SOURCES  +=                                                      $(wildcard ${NIST_HOME}/${NIST_IMP}/*.s  ) 
 export NIST_SOURCES  +=                                                      $(wildcard ${NIST_HOME}/${NIST_IMP}/*.S  ) 
 export NIST_HEADERS   = $(filter-out ${NIST_HOME}/${NIST_IMP}/genkat_aead.h, $(wildcard ${NIST_HOME}/${NIST_IMP}/*.h  ))
+endif
+
+# -----------------------------------------------------------------------------
+
+ifeq "${API}" "hash"
+
+endif
 
 # =============================================================================
