--- a/src/sw/share/arch/rv64/Makefile.in
+++ b/src/sw/share/arch/rv64/Makefile.in
@@ -26,10 +26,10 @@ export GCC_LIBS   =
 # -----------------------------------------------------------------------------
 
 run   : build
-	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike    --isa='rv64gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv64-unknown-elf/bin/pk ${REPO_HOME}/build/${ALG}/driver-${ARCH}_${IMP}.elf
+	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike    --isa='rv64gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv64-unknown-elf/bin/pk ${REPO_HOME}/build/${ALG}/driver-${API}_${ARCH}_${IMP}.elf
 
 debug : build
-	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike -d --isa='rv64gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv64-unknown-elf/bin/pk ${REPO_HOME}/build/${ALG}/driver-${ARCH}_${IMP}.elf
+	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike -d --isa='rv64gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv64-unknown-elf/bin/pk ${REPO_HOME}/build/${ALG}/driver-${API}_${ARCH}_${IMP}.elf
 
 scan  :
 	@PYTHONPATH="./share" python3 ./${ALG}/scan.py --nist --rv64
