--- a/src/sw/jambu/Makefile.in
+++ b/src/sw/jambu/Makefile.in
@@ -23,7 +23,7 @@ endif
 # -----------------------------------------------------------------------------
 
 ifeq "${API}" "hash"
-
+$(error "${ALG} doesn't support the ${API} API")
 endif
 
 # =============================================================================
