--- a/src/sw/sparkle/Makefile.in
+++ b/src/sw/sparkle/Makefile.in
@@ -23,7 +23,17 @@ endif
 # -----------------------------------------------------------------------------
 
 ifeq "${API}" "hash"
+export NIST_HOME     ?= ${REPO_HOME}/src/sw/sparkle/nist/Implementations/crypto_hash/esch256v2
+export NIST_IMP      ?= opt
+export NIST_KAT      ?= ${NIST_HOME}/LWC_HASH_KAT_256.txt
 
+export NIST_INCLUDES  = ${NIST_HOME}/${NIST_IMP}
+
+export NIST_SOURCES   = $(filter-out ${NIST_HOME}/${NIST_IMP}/genkat_hash.c, $(wildcard ${NIST_HOME}/${NIST_IMP}/*.c  ))
+export NIST_SOURCES  +=                                                      $(wildcard ${NIST_HOME}/${NIST_IMP}/*.cpp) 
+export NIST_SOURCES  +=                                                      $(wildcard ${NIST_HOME}/${NIST_IMP}/*.s  ) 
+export NIST_SOURCES  +=                                                      $(wildcard ${NIST_HOME}/${NIST_IMP}/*.S  ) 
+export NIST_HEADERS   = $(filter-out ${NIST_HOME}/${NIST_IMP}/genkat_hash.h, $(wildcard ${NIST_HOME}/${NIST_IMP}/*.h  ))
 endif
 
 # =============================================================================
