update Hardware side to support both APIs, i.e., AEAD and hash function

--- a/src/hw/Makefile
+++ b/src/hw/Makefile
@@ -22,6 +22,7 @@ endif
 
 export PORT ?= /dev/ttyUSB0
 export ALG  ?= sparkle
+export API  ?= aead
 export ARCH ?= rv32
 export IMP  ?= rv32
 export ISE  ?= xalu
