--- a/src/hw/fpga/software/FPGA_SWCONF.in
+++ b/src/hw/fpga/software/FPGA_SWCONF.in
@@ -12,6 +12,11 @@ FPGA_DEF_CONF  = -DASCON_RV32_TYPE2
 FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
+else ifeq "${ALG}" "isap"
+FPGA_DEF_CONF  = -DISAP_RV32_TYPE2
+FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
+FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+
 else ifeq "${ALG}" "elephant"
 FPGA_DEF_CONF  = -DELEPHANT_RV32_TYPE1
 #FPGA_DEF_CONF += -DELEPHANT_RV32_UNROLL
