update fpga-scan with prebuilt-bitstream, and README.

--- a/src/hw/Makefile
+++ b/src/hw/Makefile
@@ -21,6 +21,7 @@ ifndef ROCKETCHIP_REPO
 endif
 
 export PORT ?= /dev/ttyUSB0
+export BOARD?= arty100T
 export ALG  ?= sparkle
 export API  ?= aead
 export ARCH ?= rv32
